tests/snapshots/run_core__adt_match.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_core/adt_match.hvm
---
λa λ* (a 2)
