tests/snapshots/run_core__adt_match_wrong_tag.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_core/adt_match_wrong_tag.hvm
---
[4m[1m[31mErrors:[0m
In tests/golden_tests/run_core/adt_match_wrong_tag.hvm :
Tagged terms not supported for hvm32.
[0m  3 | main = λa[4m[31m [0m#Option (a #wrong_tag λb b *)[0m
