tests/snapshots/run_core__adt_option_and.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_core/adt_option_and.hvm
---
λa (a λa λb (b λa λb (Some (b, a)) λ* None a) λ* None)
