tests/snapshots/run_core__bitonic_sort_lam.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_core/bitonic_sort_lam.hvm
---
32640
