tests/snapshots/run_core__box.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_core/box.hvm
---
λa (a λb (b 10))
