tests/snapshots/run_core__chars.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_core/chars.hvm
---
λa λ* (a 4660 λb λ* (b 33 λc λ* (c 55 String.nil)))
