tests/snapshots/run_core__chars_forall.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_core/chars_forall.hvm
---
8704
