tests/snapshots/run_core__dup_global_lam.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_core/dup_global_lam.hvm
---
λa a
